[package]
name = "sock5s"
version = "0.2.2"
authors = ["南浦月 <nanpuyue@gmail.com>"]
description = "A Simple Socks5 Proxy Server"
homepage = "https://github.com/nanpuyue/sock5s"
repository = "https://github.com/nanpuyue/sock5s"
keywords = ["socks5", "proxy", "server"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.54"
libc = "0.2.179"
socket2 = "0.6.1"
tokio = { version = "1.49.0", features = ["io-util", "macros", "rt-multi-thread", "net"] }
tokio-stream = "0.1.18"


# 自定义 Release 模式的编译选项
[profile.release]
opt-level = 3          # 最高级优化（默认就是 3，可显式声明）
lto = "thin"           # 启用 Thin LTO（链接时优化，大幅提升性能，小幅增加编译时间）
codegen-units = 1      # 单代码生成单元（最大化优化，编译时间变长，适合最终发布）
panic = "abort"        # 发生 panic 时直接终止程序（而非展开栈，减少运行时开销）
strip = true           # 剥离二进制文件的调试符号（减小体积，不影响性能）